UI/assets/css/landing-page.css
.container nav{
    width:100%;
    height: 70px;
    margin: auto;
    overflow: hidden;
    position: relative;
}
.container2 { 
    display: flex;
    justify-content: space-around;
    background-color: white;
}
header {
    background-color: white;
    color: #fff ;
    padding-top: 0px;

}
span a {
    text-decoration: none;
}
.list1 {
    margin-left: 2em;
}
ul li{
    margin: 0;
    float: right;
    padding: 10px;
    color: black;

}
li a {
    font-size: 20px;
    text-decoration: none;
    color: blue;
    font-weight: bold;
}
li a:hover {
    background-color: rgb(231, 219, 219);
}
.container li {
    display: inline;

}
nav h1 span{
    font-size: 40px;
    margin-left: 15px;
    color: rgb(43, 155, 230);
    margin-top: 0px;
}
h1 span {
    float: left;
    margin-left: 5px;
    margin-bottom: 10px;
}

footer {
    color: black;
    display: flex;
    justify-content: space-around;
    text-align: center;
    font-size: 30px;
    width: 100%;
    height: 100%;
    background-color:rgb(238, 231, 231);
}
.container4 {
    font-family: 'Ubuntu', sans-serif;
    float: left;
    margin-top: 20px;
    margin-bottom: 20px;
    height: 100%;
    width: 50%;
    text-align: center;
    font-size: 31px;
}
.container4:hover {
    background-color: rgb(233, 230, 230);
    box-shadow: 4px 4px 4px 4px rgb(175, 174, 174);
}
.form-group select{
    width: 60%;
    height: 40px;
 }
 .booking {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right: 80px;
    text-align: center;
    width: 40%;
    float: right;
    height: 100%;
    font-size: 30px;
}
.booking:hover {
    background-color: rgb(233, 230, 230);
    box-shadow: 4px 4px 4px 4px rgb(175, 174, 174);
}
label {
    display: block;
    color:black;
 }
 .form-group > select{
    width: 30%;
    margin: 0px;
 }
button.btn1#create_btn:hover{
    width:125px;
    opacity: 1.2;
    
}
.btn1#create_btn {
    width: 120px;
    height: 30px;
    background-color: rgb(211, 203, 203);
    opacity: 0.7;
    cursor: pointer;
}
input {
    width: 190px;
    height: 35px;
}
button a {
    text-decoration: none;
}
section {
    position: relative;
}
body {
    margin: 0;
}

